Peliminary Delphi wrapper 
Fixed a bug in tificc in floating point formats
Fixed a bug in device link creation on v4 profiles
Fixed a bug in psid and profile sequence tags 
Fixed memory leaks on when recovering from errors
Fixed an issue on curve inversion
Fixed several integer overflow and other integrity checks, thanks to Chris Evans
linkicc now stores the rendering intent in the profile header
Fixed delphi interface
Added Duotone support (Bilinear interpolation)
Fixed a bug on curve reversing when source curves have few points
Added bound check in floating point interpolation

2.1 Maintenance release
-----------------------

Fixed severa bugs in absolute colorimetric intent
Removed pthreads need
Updated linkicc to 2.1, cleanup
Fixed some potential issues as NULL dereferencing
Fixed GBD bug (out of bounds memory overwrite) 
changed memmove to memcpy in cache for xput improvement 
Profiles with weird curves are not prone to p`relinearization optimization.
Added functions to retrieve formatters from transforms
Fixed a bug that made crash black preservation on CMYK2CMYK devicelinks
Added named color functionality
Fixed a bug in black preservation and sligtly non-monotonic curves
Added dictionary metatag support
Fixed a bug on ReadRAWtag 
Pascal unit now is supported by Free Pascal Compiler


2.2 Maintenance release
-----------------------

Fixed a 0 byte allocation issue in _cmsCreateSubAllocChunk
Fixed encoding for floating point tags in Lab/XYZ 
Fixed Absolute colorimetric intent issues
Fixed a bug on the range of data in transicc, when colorant tag is specified
Adding a memory alignment macro for CGATS parser
Updated to ICC spec 4.3
Added compatibilty with Argyll's CGATS parser

2.3 Maintenance release
-----------------------

Fixed a bug in the named color devicelink generation
Fixed uint64 to work in systems without long long native type
Added performance improvements from several contributors, mostly artifex
Fixed a bug in black preservation checking